<resources>
    <string name="app_name">Just Java</string>

    <!-- Headers -->
    <string name="coffee_name">Cappuccino ($4.89)</string>
    <string name="quantity_txt">quantity</string>
    <string name="price_txt">order summary</string>
    <string name="toppings_txt">toppings</string>

    <!-- Buttons -->
    <string name="order_btn">order</string>
    <string name="plus">+</string>
    <string name="minus">-</string>

    <!-- CheckBoxes (Toppings) -->
    <string name="whipped_cream">Whipped Cream (+$1)</string>
    <string name="chocolate">Chocolate (+$2)</string>

    <!-- Responses -->
    <string name="yes">Yes</string>
    <string name="no">No</string>

    <!-- EditText (Name Field) -->
    <string name="name">Name</string>

    <!-- TextViews -->
    <string name="init_quantity">1</string>
    <string name="price_num">$4.89</string>

    <!-- Order Summary -->
    <string name="email_subject">JustJava order for</string>
    <string name="order_summary_whipped_cream">\nWith whipped cream topping?</string>
    <string name="order_summary_choc">\nWith chocolate topping?</string>
    <string name="order_summary_quantity">\nQuantity</string>
    <string name="order_summary_total">\nTotal</string>
    <string name="thanks">\nThanks!</string>
</resources>
