<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context="com.example.anala.justjava.MainActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:scaleType="fitCenter"
        android:src="@drawable/cappuccino" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_norm"
        android:text="@string/coffee_name"
        android:textSize="@dimen/txtLarge"
        android:layout_marginBottom="@dimen/margin_lg"/>

    <EditText
        android:id="@+id/name_field"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:hint="@string/name"
        android:inputType="textCapSentences"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_norm"
        android:text="@string/toppings_txt"
        android:textAllCaps="true" />

    <CheckBox
        android:id="@+id/whipped_cream_checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/checkbox_padding"
        android:text="@string/whipped_cream"
        android:textSize="@dimen/txtsize"/>

    <CheckBox
        android:id="@+id/chocolate_checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/checkbox_padding"
        android:text="@string/chocolate"
        android:textSize="@dimen/txtsize" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_norm"
        android:text="@string/quantity_txt"
        android:textAllCaps="true" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/minusbtn"
            android:layout_width="@dimen/btn_small"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_norm"
            android:onClick="decrement"
            android:text="@string/minus" />

        <TextView
            android:id="@+id/quantity_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_norm"
            android:text="@string/init_quantity"
            android:textColor="@android:color/black"
            android:textSize="@dimen/txtsize" />

        <Button
            android:id="@+id/plusbtn"
            android:layout_width="@dimen/btn_small"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_norm"
            android:onClick="increment"
            android:text="@string/plus" />

    </LinearLayout>

    <Button
        android:id="@+id/btnOrder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_norm"
        android:text="@string/order_btn"
        android:onClick="submitOrder"/>

</LinearLayout>